
2022-09-30  Simon Sobisch <simonsobisch@gnu.org>

	* testsuite.src/run_extensions.at, testsuite.src/run_file.at:
	  moved LINE SEQUNTIAL related tests to run_file.at

2022-09-21  Simon Sobisch <simonsobisch@gnu.org>

	* atlocal_valgrind, atlocal_win: updated to match atlocal.in

2022-07-19  Nicolas Berthier <nicolas.berthier@ocamlpro.com>

	* general: fix area A in testsuite

2022-03-29  Nicolas Berthier <nicolas.berthier@ocamlpro.com>

	* testsuite.src/configuration.at, testsuite.at/syn_misc.at: new
	  tests for sections and paragraphs that do not end with a period
	* testsuite.src/run_misc.at: fix lines in trace test

2022-07-28  Simon Sobisch <simonsobisch@gnu.org>

	* atlocal.in: option to run part of the testsuite via perf -stat
	  to check for performance (enabled for runtime only by default),
	  which can be activated by setting PERFSUFFIX variable
	* Makefile.am: additional dependencies atlocal and
	  run_prog_manual.sh where used
	* testsuite.src: added missing $COBCRUN_DIRECT

2022-03-29  Nicolas Berthier <nicolas.berther@ocamlpro.com>

	* testsuite.src/syn_copy.at: test partial replacing with SPACES
	  figurative constant

2022-01-25  Nicolas Berthier <nicolas.berther@ocamlpro.com>

	* testsuite.src/syn_copy.at: test partial replacing with literal

2022-02-10  Simon Sobisch <simonsobisch@gnu.org>

	* testsuite_manual.at [MANUAL_CHECK]: new macro for running every
	  manual test, executes the test runner, passing the test description
	  from the testsuite
	* testsuite.src/run_manual_screen.at: use of MANUAL_CHECK instead of
	  AC_CHECK, use COBRUN_DIRECT for running the tests with additional tools
	* run_prog_manual.sh.in: use DESC as title for the terminal;
	  also use title for running with GNU screen (by default NOT visible)

2021-12-03  Simon Sobisch <simonsobisch@gnu.org>

	* run_prog_manual.sh.in: added option to test from MSYS
	  which starts a detached cmd prompt (similar to xterm)

2021-11-06  Simon Sobisch <simonsobisch@gnu.org>
