@@ -2029,154 +2029,7 @@ AT_CHECK([$COBCRUN_DIRECT ./prog], [0], [], [])
 
 AT_CLEANUP
 
-
-AT_SETUP([INSPECT REPLACING TRAILING ZEROS BY SPACES])
-AT_KEYWORDS([runmisc])
-
-AT_DATA([prog.cob], [
-       IDENTIFICATION   DIVISION.
-       PROGRAM-ID.      prog.
-       DATA             DIVISION.
-       WORKING-STORAGE  SECTION.
-       01 X             PIC X(4) VALUE "1000".
-       PROCEDURE        DIVISION.
-           INSPECT X REPLACING TRAILING ZEROS BY SPACES.
-           IF X NOT = "1   "
-              DISPLAY X.
-           STOP RUN.
-])
-
-AT_CHECK([$COMPILE prog.cob], [0], [], [])
-AT_CHECK([$COBCRUN_DIRECT ./prog], [0], [], [])
-
-AT_CLEANUP
-
-
-AT_SETUP([INSPECT REPLACING complex])
-AT_KEYWORDS([runmisc CHARACTERS])
-
-AT_DATA([prog.cob], [
-       IDENTIFICATION   DIVISION.
-       PROGRAM-ID.      prog.
-       DATA             DIVISION.
-       WORKING-STORAGE  SECTION.
-       01 X             PIC X(12) VALUE "AZABBCDCCECC".
-       PROCEDURE        DIVISION.
-           INSPECT X REPLACING
-             ALL      "A" BY "Z"
-                      "B" BY "Y"
-                      "Z" BY "0"
-             TRAILING "C" BY "X"
-           IF X NOT = "Z0ZYYCDCCEXX"
-              DISPLAY "1 - " X.
-
-           INSPECT X REPLACING
-             CHARACTERS BY SPACES
-              BEFORE  "C" AFTER "0"
-             CHARACTERS BY ZEROES
-              BEFORE  "E" AFTER "C"
-           IF X NOT = "Z0   C000EXX"
-              DISPLAY "2 - " X.
-
-           STOP RUN.
-])
-
-AT_CHECK([$COMPILE prog.cob], [0], [], [])
-AT_CHECK([$COBCRUN_DIRECT ./prog], [0], [], [])
-AT_CLEANUP
-
-
-AT_SETUP([EXAMINE TALLYING])
-AT_KEYWORDS([runmisc])
-
-AT_DATA([prog.cob], [
-       IDENTIFICATION   DIVISION.
-       PROGRAM-ID.      prog.
-       DATA             DIVISION.
-       WORKING-STORAGE  SECTION.
-       01 X             PIC X(8) VALUE "AABABCAB".
-       01 N             PIC S9(5)V9(2) VALUE -11122.55.
-       01 T             PIC X(10) VALUE "    8     ".
-       PROCEDURE        DIVISION.
-           EXAMINE X TALLYING ALL "A"
-           IF TALLY NOT = 4
-              DISPLAY "Should be 4 but is " TALLY.
-           EXAMINE X TALLYING LEADING "A"
-           IF TALLY NOT = 2
-              DISPLAY "Should be 2 but is " TALLY.
-           EXAMINE X TALLYING UNTIL FIRST "C"
-           IF TALLY NOT = 5
-              DISPLAY "Should be 5 but is " TALLY.
-           EXAMINE X TALLYING ALL "A" REPLACING BY "Z"
-           IF TALLY NOT = 4
-              DISPLAY "Should be 4 but is " TALLY.
-           IF X NOT = "ZZBZBCZB"
-              DISPLAY "Should be ZZBZBCZB but is " X.
-           EXAMINE X TALLYING LEADING "Z" REPLACING BY "A"
-           IF TALLY NOT = 2
-              DISPLAY "Should be 2 but is " TALLY.
-           IF X NOT = "AABZBCZB"
-              DISPLAY "Should be AABZBCZB but is " X.
-           EXAMINE X TALLYING UNTIL FIRST "C" REPLACING BY "X"
-           IF TALLY NOT = 5
-              DISPLAY "Should be 5 but is " TALLY.
-           IF X NOT = "XXXXXCZB"
-              DISPLAY "Should be XXXXXCZB but is " X.
-           EXAMINE X TALLYING UNTIL FIRST "Y" REPLACING BY "Y"
-           IF TALLY NOT = 8
-              DISPLAY "Should be 8 but is " TALLY.
-           IF X NOT = "YYYYYYYY"
-              DISPLAY "Should be YYYYYYYY but is " X.
-           EXAMINE N TALLYING UNTIL FIRST 5 REPLACING BY 8
-           IF N NOT = -88888.55
-              DISPLAY "Should be -88888.55 but is " N.
-      *    Re-mod is forbidden here (at least on GCOS):
-      *    EXAMINE N TALLYING LEADING T (5:1)
-      *    IF TALLY NOT = 5
-      *       DISPLAY "Should be 5 but is " TALLY.
-           STOP RUN.
-])
-
-AT_CHECK([$COMPILE -freserved=EXAMINE prog.cob], [0], [], [])
-AT_CHECK([$COBCRUN_DIRECT ./prog], [0], [], [])
-
-AT_CLEANUP
-
-
-AT_SETUP([EXAMINE REPLACING])
-AT_KEYWORDS([runmisc])
-
-AT_DATA([prog.cob], [
-       IDENTIFICATION   DIVISION.
-       PROGRAM-ID.      prog.
-       DATA             DIVISION.
-       WORKING-STORAGE  SECTION.
-       01 X             PIC X(8) VALUE "AABABCAB".
-       01 Y             PIC X VALUE "Y".
-       01 N             PIC S9(5) VALUE -11122.
-       PROCEDURE        DIVISION.
-           EXAMINE X REPLACING ALL "A" BY "X"
-           IF X NOT = "XXBXBCXB"
-              DISPLAY "Should be XXBXBCXB but is " X.
-           EXAMINE X REPLACING LEADING "X" BY "Y"
-           IF X NOT = "YYBXBCXB"
-              DISPLAY "Should be YYBXBCXB but is " X.
-           EXAMINE X REPLACING FIRST "B" BY "C"
-           IF X NOT = "YYCXBCXB"
-              DISPLAY "Should be YYCXBCXB but is " X.
-           EXAMINE X REPLACING UNTIL FIRST "B" BY "Z"
-           IF X NOT = "ZZZZBCXB"
-              DISPLAY "Should be ZZZZBCXB but is " X.
-           EXAMINE N REPLACING ALL 1 BY 3
-           IF N NOT = -33322
-              DISPLAY "Should be -33322 but is " N.
-           STOP RUN.
-])
-
-AT_CHECK([$COMPILE -freserved=EXAMINE prog.cob], [0], [], [])
-AT_CHECK([$COBCRUN_DIRECT ./prog], [0], [], [])
-
-AT_CLEANUP
+# Note: more INSPECT for "TRAILING" and EXAMINE in run_extensions.at
 
 
 AT_SETUP([SWITCHES (environment COB_SWITCH_n and SET)])
